# autonomousAgent

./: .gitignore  0.llm_call.py  1.1-researcher.py  1.2-analista.py  1.3-own-tools.py  README.md  pyproject.toml
